# MAI_SEM3_LAB5

./: .gitignore  README.md
lab5/: CMakeLists.txt  main.cpp
lab5/include/: DoublyLinkedList.h  ListIterator.h  Memory_resourse.h
lab5/tests/: tests01.cpp
